Sun Sep 18 18:28:04 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/bcp.c: style updates

Fri Sep  9 10:52:20 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/config.c: make compiler happy

Fri Sep  9 10:51:15 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsthread.h: be consistent with thread macros

Thu Sep  8 22:03:02 EDT 2011	JK Lowden <jklowden@freetds.org>
	* include/tds.h src/tds/config.c tds_config_verstr accepts "auto"
	* include/tdsthread.h define mutex macros as 0 for non-thread

Wed Sep  7 11:40:59 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/ctlib/ct.c src/odbc/convert_tds2sql.c:
	* src/odbc/odbc.c src/odbc/odbc_util.c src/odbc/sql2tds.c:
	* src/tds/bulk.c src/tds/data.c src/tds/gssapi.c src/tds/query.c:
	* src/tds/token.c:
	- start using new TDS_FAILED/TDS_SUCCEED macros

Wed Sep  7 11:38:18 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/ct.c src/tds/login.c: test correctly tds results

Wed Sep  7 11:36:07 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h: change errors constants

Mon Sep  5 21:24:54 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/cancel.c: improve cancel test

Mon Sep  5 20:53:15 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/data.c src/tds/bulk.c: just some comments

Sat Sep  3 19:17:40 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/descriptor.c src/odbc/odbc.c: fix _SQLFreeDesc

Fri Sep  2 20:22:50 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- use ODBC_ENTER and ODBC_EXIT macros

Fri Sep  2 20:21:52 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/descriptor.c src/odbc/odbc.c: fix SQLCopyDesc

Fri Sep  2 20:20:05 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/odbc.c: improve odbc thread support
