@@ -1,3 +1,7 @@
+Sun Sep 18 19:13:16 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/dblib/rpc.c:
+	- post always using unicode to not loose characters
+
 Sun Sep 18 18:28:04 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/dblib/bcp.c: style updates
 
@@ -860,4 +864,4 @@ Sat Apr  9 16:15:00 EDT 2011	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.91 added because of release
 
 $FreeTDS$
-$Id: ChangeLog,v 1.3407 2011-09-18 16:27:23 freddy77 Exp $
+$Id: ChangeLog,v 1.3408 2011-09-18 17:12:36 freddy77 Exp $
